atualizando notebooks modulo 02

--- a/notebooks/02_analise_e_exploracao_de_dados/03_criando_DataFrames.ipynb
+++ b/notebooks/02_analise_e_exploracao_de_dados/03_criando_DataFrames.ipynb
@@ -1,15 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -19,7 +8,7 @@
       "source": [
         "<img alt=\"Colaboratory logo\" width=\"15%\" src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/novo_logo_bg_claro.png\">\n",
         "\n",
-        "#### **Data Science na Prática 4.0**\n",
+        "#### **Data Science na Prática**\n",
         "*by [sigmoidal.ai](https://sigmoidal.ai)*\n",
         "\n",
         "---\n",
@@ -47,21 +36,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "bg1TtdzXAIzi"
       },
+      "outputs": [],
       "source": [
         "# importar pandas\n",
         "import pandas as pd"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "c_0eor9vtkYm"
       },
+      "outputs": [],
       "source": [
         "# criar dicionário\n",
         "dados = {\n",
@@ -70,48 +61,34 @@
         "    'cidade': ['Araraquara', 'Belém', 'Natal', 'Curitiba'],\n",
         "    'comprou': [True, False, False, True]\n",
         "}"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "-K51-hGnAPBg"
       },
+      "outputs": [],
       "source": [
         "# criar DataFrame\n",
         "df = pd.DataFrame(dados)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "tcrpgd-XAR6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
+        "id": "tcrpgd-XAR6b",
         "outputId": "e9fffb54-bf06-4bb5-db78-2366cc3c4411"
       },
-      "source": [
-        "# visualizar DataFrame\n",
-        "df"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "       nome  idade      cidade  comprou\n",
-              "0    Carlos     35  Araraquara     True\n",
-              "1      Theo     32       Belém    False\n",
-              "2    Raquel     15       Natal    False\n",
-              "3  Fernanda     49    Curitiba     True"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-e4e02adc-2cbe-4654-8b14-4c8689df2ed6\" class=\"colab-df-container\">\n",
@@ -379,63 +356,63 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "       nome  idade      cidade  comprou\n",
+              "0    Carlos     35  Araraquara     True\n",
+              "1      Theo     32       Belém    False\n",
+              "2    Raquel     15       Natal    False\n",
+              "3  Fernanda     49    Curitiba     True"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# visualizar DataFrame\n",
+        "df"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "5zg1mzDUAbAG"
       },
+      "outputs": [],
       "source": [
         "# criar id do usuário\n",
         "id_usuario = [8712, 5831, 4421, 9873]"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "N443WKTvAp3G"
       },
+      "outputs": [],
       "source": [
         "# associar o id do usuário à lista\n",
         "df.index = id_usuario"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "A6Fhe-svAucS",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
+        "id": "A6Fhe-svAucS",
         "outputId": "75552dea-18b0-46ba-be3d-de41165e5dd0"
       },
-      "source": [
-        "# ver o dataframe\n",
-        "df"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "          nome  idade      cidade  comprou\n",
-              "8712    Carlos     35  Araraquara     True\n",
-              "5831      Theo     32       Belém    False\n",
-              "4421    Raquel     15       Natal    False\n",
-              "9873  Fernanda     49    Curitiba     True"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-aef6153b-76ee-4512-aaf5-d15f89481325\" class=\"colab-df-container\">\n",
@@ -703,11 +680,23 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "          nome  idade      cidade  comprou\n",
+              "8712    Carlos     35  Araraquara     True\n",
+              "5831      Theo     32       Belém    False\n",
+              "4421    Raquel     15       Natal    False\n",
+              "9873  Fernanda     49    Curitiba     True"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# ver o dataframe\n",
+        "df"
       ]
     },
     {
@@ -725,40 +714,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "szoV_HzFvgDf",
-        "outputId": "c15d2cf3-125e-4578-c051-0052361075d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "id": "szoV_HzFvgDf",
+        "outputId": "c15d2cf3-125e-4578-c051-0052361075d6"
       },
-      "source": [
-        "# listas\n",
-        "dados = [['Carlos', 35, 'Araraquara', 'True'],\n",
-        "         ['Theo', 32, 'Natal', 'False'],\n",
-        "         ['Raquel', 12, 'SJC', 'True'],\n",
-        "         ['Fernanda', 14, 'Brasilia', 'True']]\n",
-        "\n",
-        "# criar DataFrame\n",
-        "df = pd.DataFrame(dados, columns=['nome', 'idade', 'cidade', 'comprou'],\n",
-        "                  index=[124, 543, 999, 214])\n",
-        "\n",
-        "# visualizar DataFrame\n",
-        "df"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "         nome  idade      cidade comprou\n",
-              "124    Carlos     35  Araraquara    True\n",
-              "543      Theo     32       Natal   False\n",
-              "999    Raquel     12         SJC    True\n",
-              "214  Fernanda     14    Brasilia    True"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-8cedb34f-422a-4a8c-8b95-971bd0c7f93f\" class=\"colab-df-container\">\n",
@@ -1026,30 +993,47 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "         nome  idade      cidade comprou\n",
+              "124    Carlos     35  Araraquara    True\n",
+              "543      Theo     32       Natal   False\n",
+              "999    Raquel     12         SJC    True\n",
+              "214  Fernanda     14    Brasilia    True"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# listas\n",
+        "dados = [['Carlos', 35, 'Araraquara', 'True'],\n",
+        "         ['Theo', 32, 'Natal', 'False'],\n",
+        "         ['Raquel', 12, 'SJC', 'True'],\n",
+        "         ['Fernanda', 14, 'Brasilia', 'True']]\n",
+        "\n",
+        "# criar DataFrame\n",
+        "df = pd.DataFrame(dados, columns=['nome', 'idade', 'cidade', 'comprou'],\n",
+        "                  index=[124, 543, 999, 214])\n",
+        "\n",
+        "# visualizar DataFrame\n",
+        "df"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "-gr98OrxB3zW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "-gr98OrxB3zW",
         "outputId": "85acc8b4-526d-42bb-9058-a8fc160e2792"
       },
-      "source": [
-        "# selecionar pelo index\n",
-        "df.loc[124]"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "nome           Carlos\n",
@@ -1059,9 +1043,14 @@
               "Name: 124, dtype: object"
             ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# selecionar pelo index\n",
+        "df.loc[124]"
       ]
     },
     {
@@ -1079,33 +1068,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "wfw9Ojec1ED3",
-        "outputId": "e1d4e027-2441-4eb6-c9f4-f64deb44b303",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "id": "wfw9Ojec1ED3",
+        "outputId": "e1d4e027-2441-4eb6-c9f4-f64deb44b303"
       },
-      "source": [
-        "# criar coluna \"saldo\"\n",
-        "df['saldo'] = 0.0\n",
-        "\n",
-        "# visualizar DataFrame\n",
-        "df"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "         nome  idade      cidade comprou  saldo\n",
-              "124    Carlos     35  Araraquara    True    0.0\n",
-              "543      Theo     32       Natal   False    0.0\n",
-              "999    Raquel     12         SJC    True    0.0\n",
-              "214  Fernanda     14    Brasilia    True    0.0"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-3811f7ec-b066-49aa-90f6-c8ca928d6b3f\" class=\"colab-df-container\">\n",
@@ -1378,11 +1352,26 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "         nome  idade      cidade comprou  saldo\n",
+              "124    Carlos     35  Araraquara    True    0.0\n",
+              "543      Theo     32       Natal   False    0.0\n",
+              "999    Raquel     12         SJC    True    0.0\n",
+              "214  Fernanda     14    Brasilia    True    0.0"
             ]
           },
+          "execution_count": 10,
           "metadata": {},
-          "execution_count": 10
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# criar coluna \"saldo\"\n",
+        "df['saldo'] = 0.0\n",
+        "\n",
+        "# visualizar DataFrame\n",
+        "df"
       ]
     },
     {
@@ -1400,59 +1389,44 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "tiGByguXlPUc",
-        "outputId": "98bbd4c0-7a4d-4a76-f852-c1e58c358223",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tiGByguXlPUc",
+        "outputId": "98bbd4c0-7a4d-4a76-f852-c1e58c358223"
       },
-      "source": [
-        "df.index"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Int64Index([124, 543, 999, 214], dtype='int64')"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df.index"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "I-x7DIoU2I56",
-        "outputId": "a04b1789-35e4-4bca-d167-9aa8f22f0765",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "id": "I-x7DIoU2I56",
+        "outputId": "a04b1789-35e4-4bca-d167-9aa8f22f0765"
       },
-      "source": [
-        "# alterar o index do df\n",
-        "df.index = ['a', 'b', 'c', 'd']\n",
-        "\n",
-        "# visualizar DataFrame\n",
-        "df"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "       nome  idade      cidade comprou  saldo\n",
-              "a    Carlos     35  Araraquara    True    0.0\n",
-              "b      Theo     32       Natal   False    0.0\n",
-              "c    Raquel     12         SJC    True    0.0\n",
-              "d  Fernanda     14    Brasilia    True    0.0"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-40b7341f-1d6a-494c-9b28-5fb1de0a8e33\" class=\"colab-df-container\">\n",
@@ -1725,11 +1699,26 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "       nome  idade      cidade comprou  saldo\n",
+              "a    Carlos     35  Araraquara    True    0.0\n",
+              "b      Theo     32       Natal   False    0.0\n",
+              "c    Raquel     12         SJC    True    0.0\n",
+              "d  Fernanda     14    Brasilia    True    0.0"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# alterar o index do df\n",
+        "df.index = ['a', 'b', 'c', 'd']\n",
+        "\n",
+        "# visualizar DataFrame\n",
+        "df"
       ]
     },
     {
@@ -1743,33 +1732,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "9cZdwkoq2aPG",
-        "outputId": "e11254e6-10b0-44de-ca62-8ae2767a81da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "id": "9cZdwkoq2aPG",
+        "outputId": "e11254e6-10b0-44de-ca62-8ae2767a81da"
       },
-      "source": [
-        "# alterar os labels das colunas\n",
-        "df.columns = ['Nome do Cliente', \"Idade\", \"Naturalidade\", \"Fez Compras?\", \"Saldo na Loja\"]\n",
-        "\n",
-        "# visualizar DataFrame\n",
-        "df"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "  Nome do Cliente  Idade Naturalidade Fez Compras?  Saldo na Loja\n",
-              "a          Carlos     35   Araraquara         True            0.0\n",
-              "b            Theo     32        Natal        False            0.0\n",
-              "c          Raquel     12          SJC         True            0.0\n",
-              "d        Fernanda     14     Brasilia         True            0.0"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-1d1c61a4-0443-4f36-ac8b-51627d2acd90\" class=\"colab-df-container\">\n",
@@ -2042,12 +2016,38 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "  Nome do Cliente  Idade Naturalidade Fez Compras?  Saldo na Loja\n",
+              "a          Carlos     35   Araraquara         True            0.0\n",
+              "b            Theo     32        Natal        False            0.0\n",
+              "c          Raquel     12          SJC         True            0.0\n",
+              "d        Fernanda     14     Brasilia         True            0.0"
             ]
           },
+          "execution_count": 13,
           "metadata": {},
-          "execution_count": 13
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# alterar os labels das colunas\n",
+        "df.columns = ['Nome do Cliente', \"Idade\", \"Naturalidade\", \"Fez Compras?\", \"Saldo na Loja\"]\n",
+        "\n",
+        "# visualizar DataFrame\n",
+        "df"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
