--- a/notebooks/02_analise_e_exploracao_de_dados/04_info_estatisticas.ipynb
+++ b/notebooks/02_analise_e_exploracao_de_dados/04_info_estatisticas.ipynb
@@ -1,15 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -19,7 +8,7 @@
       "source": [
         "<img alt=\"Colaboratory logo\" width=\"15%\" src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/novo_logo_bg_claro.png\">\n",
         "\n",
-        "#### **Data Science na Prática 4.0**\n",
+        "#### **Data Science na Prática**\n",
         "*by [sigmoidal.ai](https://sigmoidal.ai)*\n",
         "\n",
         "---\n",
@@ -43,59 +32,59 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Nova seção"
-      ],
       "metadata": {
         "id": "PvMAvKZXsWpU"
-      }
+      },
+      "source": [
+        "# Nova seção"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "VulMvK9gi8aa"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "OakiV1vt6Ec1"
       },
+      "outputs": [],
       "source": [
         "# importar os pacotes necessários\n",
         "import pandas as pd\n",
         "\n",
         "# importar o dataset\n",
         "df = pd.read_csv(\"http://dl.dropboxusercontent.com/s/yyfeoxqw61o3iel/df_rides.csv\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "PAqCSXHGRdFs",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "PAqCSXHGRdFs",
         "outputId": "95978c61-34de-4d9c-a17f-14fe1b51c1af"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -124,60 +113,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "w7RRdNxc6H9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
+        "id": "w7RRdNxc6H9e",
         "outputId": "6ed7f78c-d07a-434e-fff8-c5149a763634"
       },
-      "source": [
-        "# ver as 5 primeiras entradas\n",
-        "df.head(10)"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "  user_gender user_birthdate user_residence   ride_date time_start  time_end  \\\n",
-              "0           M     1971-06-08            NaN  2018-01-01   06:05:18  06:21:33   \n",
-              "1           M     1989-02-11             DF  2018-01-01   06:27:01  06:32:17   \n",
-              "2           M     1968-07-19            NaN  2018-01-01   06:29:33  06:44:57   \n",
-              "3           M     1991-12-19            NaN  2018-01-01   06:53:53  06:59:45   \n",
-              "4           M     1969-03-03             DF  2018-01-01   06:58:56  17:40:04   \n",
-              "5           M     1995-11-10            NaN  2018-01-01   07:01:59  07:07:48   \n",
-              "6           M     1971-02-21            NaN  2018-01-01   07:02:37  07:22:27   \n",
-              "7           M     1994-11-19             DF  2018-01-01   07:17:34  07:25:05   \n",
-              "8           M     1983-06-14            NaN  2018-01-01   07:21:56  07:30:32   \n",
-              "9           M     1970-06-22            NaN  2018-01-01   07:25:21  07:43:25   \n",
-              "\n",
-              "                     station_start  \\\n",
-              "0                11 - Rodoviária 2   \n",
-              "1         26 - Ministério da Saude   \n",
-              "2                11 - Rodoviária 2   \n",
-              "3  10 - Ministério dos Transportes   \n",
-              "4                   15 - Brasil 21   \n",
-              "5         26 - Ministério da Saude   \n",
-              "6                         30 - TSE   \n",
-              "7        5 - Setor Hoteleiro Norte   \n",
-              "8        9 - Ministério da Cultura   \n",
-              "9                  4 - Torre de TV   \n",
-              "\n",
-              "                                         station_end  ride_duration  ride_late  \n",
-              "0                            41 - Instituto de Artes      16.250000        0.0  \n",
-              "1  28 - CNMP - Conselho Nacional do Ministério Pú...       5.266667        0.0  \n",
-              "2                            43 - Biblioteca Central      15.400000        0.0  \n",
-              "3                                     6 - Rodoviária       5.866667        0.0  \n",
-              "4                                  11 - Rodoviária 2     641.133333        1.0  \n",
-              "5                                  11 - Rodoviária 2       5.816667        0.0  \n",
-              "6                                  11 - Rodoviária 2      19.833333        0.0  \n",
-              "7                    10 - Ministério dos Transportes       7.516667        0.0  \n",
-              "8                                  11 - Rodoviária 2       8.600000        0.0  \n",
-              "9                                    4 - Torre de TV      18.066667        0.0  "
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-ab073574-6849-405b-9f7d-a2962b25b529\" class=\"colab-df-container\">\n",
@@ -553,43 +500,69 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "  user_gender user_birthdate user_residence   ride_date time_start  time_end  \\\n",
+              "0           M     1971-06-08            NaN  2018-01-01   06:05:18  06:21:33   \n",
+              "1           M     1989-02-11             DF  2018-01-01   06:27:01  06:32:17   \n",
+              "2           M     1968-07-19            NaN  2018-01-01   06:29:33  06:44:57   \n",
+              "3           M     1991-12-19            NaN  2018-01-01   06:53:53  06:59:45   \n",
+              "4           M     1969-03-03             DF  2018-01-01   06:58:56  17:40:04   \n",
+              "5           M     1995-11-10            NaN  2018-01-01   07:01:59  07:07:48   \n",
+              "6           M     1971-02-21            NaN  2018-01-01   07:02:37  07:22:27   \n",
+              "7           M     1994-11-19             DF  2018-01-01   07:17:34  07:25:05   \n",
+              "8           M     1983-06-14            NaN  2018-01-01   07:21:56  07:30:32   \n",
+              "9           M     1970-06-22            NaN  2018-01-01   07:25:21  07:43:25   \n",
+              "\n",
+              "                     station_start  \\\n",
+              "0                11 - Rodoviária 2   \n",
+              "1         26 - Ministério da Saude   \n",
+              "2                11 - Rodoviária 2   \n",
+              "3  10 - Ministério dos Transportes   \n",
+              "4                   15 - Brasil 21   \n",
+              "5         26 - Ministério da Saude   \n",
+              "6                         30 - TSE   \n",
+              "7        5 - Setor Hoteleiro Norte   \n",
+              "8        9 - Ministério da Cultura   \n",
+              "9                  4 - Torre de TV   \n",
+              "\n",
+              "                                         station_end  ride_duration  ride_late  \n",
+              "0                            41 - Instituto de Artes      16.250000        0.0  \n",
+              "1  28 - CNMP - Conselho Nacional do Ministério Pú...       5.266667        0.0  \n",
+              "2                            43 - Biblioteca Central      15.400000        0.0  \n",
+              "3                                     6 - Rodoviária       5.866667        0.0  \n",
+              "4                                  11 - Rodoviária 2     641.133333        1.0  \n",
+              "5                                  11 - Rodoviária 2       5.816667        0.0  \n",
+              "6                                  11 - Rodoviária 2      19.833333        0.0  \n",
+              "7                    10 - Ministério dos Transportes       7.516667        0.0  \n",
+              "8                                  11 - Rodoviária 2       8.600000        0.0  \n",
+              "9                                    4 - Torre de TV      18.066667        0.0  "
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# ver as 5 primeiras entradas\n",
+        "df.head(10)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "_vgNRUd-EaGg",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
+        "id": "_vgNRUd-EaGg",
         "outputId": "8c4392b0-c0f1-4cb4-dda5-65c409b991ff"
       },
-      "source": [
-        "# verificando informações estatísticas do df\n",
-        "df.describe()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "       ride_duration      ride_late\n",
-              "count  214148.000000  214148.000000\n",
-              "mean       29.915932       0.098829\n",
-              "std        58.857297       0.298433\n",
-              "min         3.000000       0.000000\n",
-              "25%         8.083333       0.000000\n",
-              "50%        14.200000       0.000000\n",
-              "75%        33.766667       0.000000\n",
-              "max       999.600000       1.000000"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-68689b20-01a7-4cd1-b20d-a998b66ec3c0\" class=\"colab-df-container\">\n",
@@ -867,11 +840,27 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "       ride_duration      ride_late\n",
+              "count  214148.000000  214148.000000\n",
+              "mean       29.915932       0.098829\n",
+              "std        58.857297       0.298433\n",
+              "min         3.000000       0.000000\n",
+              "25%         8.083333       0.000000\n",
+              "50%        14.200000       0.000000\n",
+              "75%        33.766667       0.000000\n",
+              "max       999.600000       1.000000"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# verificando informações estatísticas do df\n",
+        "df.describe()"
       ]
     },
     {
@@ -887,29 +876,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Ni2O8xcAS3WG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Ni2O8xcAS3WG",
         "outputId": "14cbe5ce-ef4a-491d-a5fe-55ddbac63d0b"
       },
-      "source": [
-        "# ver a média da coluna ride_duration\n",
-        "df.ride_duration.mean()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "29.915931894453053"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# ver a média da coluna ride_duration\n",
+        "df.ride_duration.mean()"
       ]
     },
     {
@@ -958,56 +947,56 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "uUhrR0dsXxuE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "uUhrR0dsXxuE",
         "outputId": "e9360c6d-5084-460d-93d8-67333374b127"
       },
-      "source": [
-        "# calcular a mediana\n",
-        "pd.Series([1,1,2,4,900]).median()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2.0"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# calcular a mediana\n",
+        "pd.Series([1,1,2,4,900]).median()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "yhxZYdXNTcG4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "yhxZYdXNTcG4",
         "outputId": "821adf56-4207-496e-cbe6-09c9c4d672b3"
       },
-      "source": [
-        "# calcular o desvio padrão para ride_calculation\n",
-        "df.ride_duration.std()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "58.857296541638746"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# calcular o desvio padrão para ride_calculation\n",
+        "df.ride_duration.std()"
       ]
     },
     {
@@ -1023,66 +1012,77 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "gUyA6i-KYrgU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "gUyA6i-KYrgU",
         "outputId": "5b087841-f0b3-43db-8b24-e5771da38ce3"
       },
-      "source": [
-        "# valor máximo\n",
-        "df.ride_duration.max()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "999.6"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# valor máximo\n",
+        "df.ride_duration.max()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "3tVzhyThYyAU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "3tVzhyThYyAU",
         "outputId": "080d6f29-a428-4fe4-f35f-f0d7105de5b1"
       },
-      "source": [
-        "# valor mínimo\n",
-        "df.ride_duration.min()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "3.0"
             ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# valor mínimo\n",
+        "df.ride_duration.min()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "2nRUBgMPVNLY"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
