--- a/notebooks/02_analise_e_exploracao_de_dados/06_valores_ausentes.ipynb
+++ b/notebooks/02_analise_e_exploracao_de_dados/06_valores_ausentes.ipynb
@@ -1,15 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -19,7 +8,7 @@
       "source": [
         "<img alt=\"Colaboratory logo\" width=\"15%\" src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/novo_logo_bg_claro.png\">\n",
         "\n",
-        "#### **Data Science na Prática 4.0**\n",
+        "#### **Data Science na Prática**\n",
         "*by [sigmoidal.ai](https://sigmoidal.ai)*\n",
         "\n",
         "---\n",
@@ -40,53 +29,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "pGmRLamzA6pv",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 201
         },
+        "id": "pGmRLamzA6pv",
         "outputId": "912ba915-b1ca-4b3f-8422-176571aff5d9"
       },
-      "source": [
-        "DATA_PATH = \"http://dl.dropboxusercontent.com/s/yyfeoxqw61o3iel/df_rides.csv\"\n",
-        "\n",
-        "# importar os pacotes necessários\n",
-        "import pandas as pd\n",
-        "\n",
-        "# importar o dataset\n",
-        "df = pd.read_csv(DATA_PATH)\n",
-        "\n",
-        "# ver as primeiras entradas\n",
-        "df.head()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "  user_gender user_birthdate user_residence   ride_date time_start  time_end  \\\n",
-              "0           M     1971-06-08            NaN  2018-01-01   06:05:18  06:21:33   \n",
-              "1           M     1989-02-11             DF  2018-01-01   06:27:01  06:32:17   \n",
-              "2           M     1968-07-19            NaN  2018-01-01   06:29:33  06:44:57   \n",
-              "3           M     1991-12-19            NaN  2018-01-01   06:53:53  06:59:45   \n",
-              "4           M     1969-03-03             DF  2018-01-01   06:58:56  17:40:04   \n",
-              "\n",
-              "                     station_start  \\\n",
-              "0                11 - Rodoviária 2   \n",
-              "1         26 - Ministério da Saude   \n",
-              "2                11 - Rodoviária 2   \n",
-              "3  10 - Ministério dos Transportes   \n",
-              "4                   15 - Brasil 21   \n",
-              "\n",
-              "                                         station_end  ride_duration  ride_late  \n",
-              "0                            41 - Instituto de Artes      16.250000        0.0  \n",
-              "1  28 - CNMP - Conselho Nacional do Ministério Pú...       5.266667        0.0  \n",
-              "2                            43 - Biblioteca Central      15.400000        0.0  \n",
-              "3                                     6 - Rodoviária       5.866667        0.0  \n",
-              "4                                  11 - Rodoviária 2     641.133333        1.0  "
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-7bdc3729-e05c-4873-a690-615a6852ec0d\">\n",
@@ -266,11 +220,46 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "  user_gender user_birthdate user_residence   ride_date time_start  time_end  \\\n",
+              "0           M     1971-06-08            NaN  2018-01-01   06:05:18  06:21:33   \n",
+              "1           M     1989-02-11             DF  2018-01-01   06:27:01  06:32:17   \n",
+              "2           M     1968-07-19            NaN  2018-01-01   06:29:33  06:44:57   \n",
+              "3           M     1991-12-19            NaN  2018-01-01   06:53:53  06:59:45   \n",
+              "4           M     1969-03-03             DF  2018-01-01   06:58:56  17:40:04   \n",
+              "\n",
+              "                     station_start  \\\n",
+              "0                11 - Rodoviária 2   \n",
+              "1         26 - Ministério da Saude   \n",
+              "2                11 - Rodoviária 2   \n",
+              "3  10 - Ministério dos Transportes   \n",
+              "4                   15 - Brasil 21   \n",
+              "\n",
+              "                                         station_end  ride_duration  ride_late  \n",
+              "0                            41 - Instituto de Artes      16.250000        0.0  \n",
+              "1  28 - CNMP - Conselho Nacional do Ministério Pú...       5.266667        0.0  \n",
+              "2                            43 - Biblioteca Central      15.400000        0.0  \n",
+              "3                                     6 - Rodoviária       5.866667        0.0  \n",
+              "4                                  11 - Rodoviária 2     641.133333        1.0  "
             ]
           },
+          "execution_count": 1,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "DATA_PATH = \"http://dl.dropboxusercontent.com/s/yyfeoxqw61o3iel/df_rides.csv\"\n",
+        "\n",
+        "# importar os pacotes necessários\n",
+        "import pandas as pd\n",
+        "\n",
+        "# importar o dataset\n",
+        "df = pd.read_csv(DATA_PATH)\n",
+        "\n",
+        "# ver as primeiras entradas\n",
+        "df.head()"
       ]
     },
     {
@@ -286,21 +275,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "VRcP5l-7Bgao",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "VRcP5l-7Bgao",
         "outputId": "c5079221-26d4-4edc-9cf8-452578652f49"
       },
-      "source": [
-        "# ver a quantidade de valores ausentes\n",
-        "df.isnull().sum()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "user_gender          396\n",
@@ -316,28 +300,28 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# ver a quantidade de valores ausentes\n",
+        "df.isnull().sum()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "nQvK0IuSBjHR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "nQvK0IuSBjHR",
         "outputId": "4a6b3afe-3d73-4122-bbed-f22e49ac583b"
       },
-      "source": [
-        "# ver a porcentagem de valores ausentes\n",
-        "df.isnull().sum() / df.shape[0]"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "user_gender       0.001378\n",
@@ -353,9 +337,14 @@
               "dtype: float64"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# ver a porcentagem de valores ausentes\n",
+        "df.isnull().sum() / df.shape[0]"
       ]
     },
     {
@@ -375,13 +364,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "i6RlbEz2DNj3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "i6RlbEz2DNj3",
         "outputId": "a7cccf3d-a6ca-43b2-a7df-1b9e33cfc5ff"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Antes:\t(287322, 10)\n",
+            "Depois:\t(286926, 10)\n"
+          ]
+        }
+      ],
       "source": [
         "# eliminar todas as entradas onde existam valores ausentes em `user_gender`\n",
         "df_clean = df.dropna(subset=['user_gender'], axis=0)\n",
@@ -389,17 +389,6 @@
         "# comparar o antes e o depois\n",
         "print(\"Antes:\\t{}\".format(df.shape))\n",
         "print(\"Depois:\\t{}\".format(df_clean.shape))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Antes:\t(287322, 10)\n",
-            "Depois:\t(286926, 10)\n"
-          ]
-        }
       ]
     },
     {
@@ -421,21 +410,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "1LiewAIO7CJO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "1LiewAIO7CJO",
         "outputId": "971d1315-f2fe-4071-998a-aed53e0bf1e8"
       },
-      "source": [
-        "# antes\n",
-        "df_clean.isnull().sum()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "user_gender            0\n",
@@ -451,32 +435,28 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# antes\n",
+        "df_clean.isnull().sum()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "_MuQkDcPFM9R",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "_MuQkDcPFM9R",
         "outputId": "0f860fca-d2e1-48c6-aa9e-2314edbda319"
       },
-      "source": [
-        "# preencher valores ausentes em `ride_duration` com a mediana\n",
-        "rd_median = df_clean.ride_duration.median()\n",
-        "df_clean = df_clean.fillna({\"ride_duration\": rd_median})\n",
-        "\n",
-        "# ver valores ausentes\n",
-        "df_clean.isnull().sum()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "user_gender            0\n",
@@ -492,9 +472,18 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# preencher valores ausentes em `ride_duration` com a mediana\n",
+        "rd_median = df_clean.ride_duration.median()\n",
+        "df_clean = df_clean.fillna({\"ride_duration\": rd_median})\n",
+        "\n",
+        "# ver valores ausentes\n",
+        "df_clean.isnull().sum()"
       ]
     },
     {
@@ -508,24 +497,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "J_1tGxn07S1S",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "J_1tGxn07S1S",
         "outputId": "d326be99-75ff-4ffe-fb03-2e8b76aae486"
       },
-      "source": [
-        "# copiar novamente\n",
-        "df_clean = df.copy()\n",
-        "\n",
-        "# ver valores ausentes\n",
-        "df_clean.isnull().sum()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "user_gender          396\n",
@@ -541,28 +522,31 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# copiar novamente\n",
+        "df_clean = df.copy()\n",
+        "\n",
+        "# ver valores ausentes\n",
+        "df_clean.isnull().sum()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "amgKJvvlF9ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "amgKJvvlF9ea",
         "outputId": "5922d75a-35cd-4b05-ec88-0a4289de938e"
       },
-      "source": [
-        "# ver o valor mais frequente\n",
-        "df_clean.user_gender.value_counts()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "M    212608\n",
@@ -570,31 +554,28 @@
               "Name: user_gender, dtype: int64"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# ver o valor mais frequente\n",
+        "df_clean.user_gender.value_counts()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "eFTYwbyrGPFA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "eFTYwbyrGPFA",
         "outputId": "a42c0855-dca9-4334-c5b9-b1d7e4a42304"
       },
-      "source": [
-        "# preencher os valores ausentes de user_gender com 'M'\n",
-        "df_clean = df_clean.fillna({\"user_gender\": 'M'})\n",
-        "\n",
-        "# ver valores ausentes\n",
-        "df_clean.isnull().sum()"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "user_gender            0\n",
@@ -610,19 +591,38 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# preencher os valores ausentes de user_gender com 'M'\n",
+        "df_clean = df_clean.fillna({\"user_gender\": 'M'})\n",
+        "\n",
+        "# ver valores ausentes\n",
+        "df_clean.isnull().sum()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "s0gEfhdZ7h-N"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
