--- a/notebooks/02_analise_e_exploracao_de_dados/10_[Template]_projeto_airbnb.ipynb
+++ b/notebooks/02_analise_e_exploracao_de_dados/10_[Template]_projeto_airbnb.ipynb
@@ -1,15 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -19,7 +8,7 @@
       "source": [
         "<img alt=\"Colaboratory logo\" width=\"15%\" src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/novo_logo_bg_claro.png\">\n",
         "\n",
-        "#### **Data Science na Prática 4.0**\n",
+        "#### **Data Science na Prática**\n",
         "*by [sigmoidal.ai](https://sigmoidal.ai)*\n",
         "\n",
         "---\n",
@@ -50,25 +39,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Vhp2wMPgJ6zX"
       },
+      "outputs": [],
       "source": [
         "# importar os pacotes necessarios\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "tUmoAT8DLQ5T"
       },
+      "outputs": [],
       "source": [
         "# importar o arquivo listings.csv para um DataFrame\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -96,14 +85,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "2iS_dae7YQtO"
       },
+      "outputs": [],
       "source": [
         "# mostrar as 5 primeiras entradas\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -116,16 +105,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "TFRK0tniLV-G"
       },
+      "outputs": [],
       "source": [
         "# identificar o volume de dados do DataFrame\n",
         "\n",
         "# verificar as 5 primeiras entradas do dataset\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -138,14 +127,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "plk2FjbCXOqP"
       },
+      "outputs": [],
       "source": [
         "# ordenar em ordem decrescente as variáveis por seus valores ausentes\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -158,14 +147,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "q2wWSfeRbmBo"
       },
+      "outputs": [],
       "source": [
         "# plotar o histograma das variáveis numéricas\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -178,14 +167,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ff-8gUahLk-C"
       },
+      "outputs": [],
       "source": [
         "# ver a média da coluna `price``\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -198,27 +187,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "x2ayzBajqxyd"
       },
+      "outputs": [],
       "source": [
         "# criar uma matriz de correlação\n",
         "\n",
         "# mostrar a matriz de correlação\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "91UujDr6ueqE"
       },
+      "outputs": [],
       "source": [
         "# plotar um heatmap a partir das correlações\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -231,25 +220,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ueLPNWvPHgfB"
       },
+      "outputs": [],
       "source": [
         "# mostrar a quantidade de cada tipo de imóvel disponível\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "EvwoO-XAHhIm"
       },
+      "outputs": [],
       "source": [
         "# mostrar a porcentagem de cada tipo de imóvel disponível\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -263,25 +252,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "MD_xa143JZpi"
       },
+      "outputs": [],
       "source": [
         "# ver preços por bairros, na média\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "UxVJqJ_3W59I"
       },
+      "outputs": [],
       "source": [
         "# plotar os imóveis pela latitude-longitude\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -294,14 +283,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "_VzNhrEgY82N"
       },
+      "outputs": [],
       "source": [
         "# ver a média da coluna `minimum_nights``"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -319,5 +308,16 @@
       },
       "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
